# hypersuscap

./: app.py  constants.py  cta_enhancers.json  electric_configurations.db  logging.config  open_ai_call.py  open_ai_call.python  pyproject.toml  reader.py  retriever.py  sub_prompting_modules.py  workflow.py
profiles/: profile1.json  profile2.json  profile3.json  profile4.json
segments/: segment2.json  segment_peter.json  segment_viola.json
