[tool.poetry]
name = "hypersuscap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<=3.10.14"
streamlit = "^1.33.0"
openai = "^1.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"